# fwf2csv

./: Cargo.toml  README.txt
example/: input_file.fwf  input_schema.csv  run.sh
src/: lib.rs  main.rs
