[package]
name = "fwf2csv"
version = "0.1.0"
authors = ["Leonid Shvechikov <shvechikov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "0.2.12"
csv = "1.1.3"
serde = { version = "1.0.106", features = ["derive"] }
clap = "2.33.0"
